collection related api change
